feat: support shared cluster Hemlig consumers
